@@ -269,6 +269,9 @@ def setCommonTestConfig(Test task) {
     // this is needed to reflect access system env map.
     task.jvmArgs += "--add-opens=java.base/java.io=ALL-UNNAMED"
     task.jvmArgs += "--add-opens=java.base/java.util=ALL-UNNAMED"
+    task.jvmArgs += "--add-opens=java.base/java.nio=ALL-UNNAMED"
+    task.jvmArgs += "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+    task.jvmArgs += "-Dio.netty.transport.noNative=true"
     task.retry {
         failOnPassedAfterRetry = false
         maxRetries = 5
@@ -302,6 +305,9 @@ test {
     // this is needed to reflect access system env map.
     jvmArgs += "--add-opens=java.base/java.io=ALL-UNNAMED"
     jvmArgs += "--add-opens=java.base/java.util=ALL-UNNAMED"
+    jvmArgs += "--add-opens=java.base/java.nio=ALL-UNNAMED"
+    jvmArgs += "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+    jvmArgs += "-Dio.netty.transport.noNative=true"
     retry {
         failOnPassedAfterRetry = false
         maxRetries = 5
